# PQCCN-strongswan

./: .gitignore  ALGORITHM_CONFIG_AUDIT.md  Orchestration.py  PERFORMANCE_TEST_GUIDE.md  README.md  UPDATE_SUMMARY.md  WARMUP_REFACTOR_CHANGELOG.md  WARMUP_REFACTOR_SUMMARY.md  WARMUP_USAGE_GUIDE.md  config_utils.py  pyproject.toml  reporting.py  requirements.txt  summarize_matrix_results.py  summarize_results.py  test_warmup_refactor.py
Writerside/: AGENTS.md
Writerside/topics/: Data-Collection.md  Quick-Setup-Guide.md
configs/experiments/: consolidate_configs.sh
data_analysis/: Plotting.py  __init__.py
data_collection/: CONFIG_REFERENCE.md  DataCollectCore.py  README.md  __init__.py
data_collection/configs/: DataCollect.yaml  DataCollect_TEMPLATE.yaml  DataCollect_baseline.yaml  DataCollect_baseline_quick.yaml  DataCollect_composite_harsh.yaml  DataCollect_composite_ideal.yaml  DataCollect_composite_metro.yaml  DataCollect_composite_wan.yaml  DataCollect_delay.yaml  README.md  (+7 more)
data_parsing/: LogConversion.py  ProcessLogs.py  __init__.py
data_preparation/: ProcessStats.py  __init__.py
docs/: README.md
pq-strongswan/: Dockerfile  README.md  baseline-docker-compose.yml  docker-compose.yml  hybrid-cert-docker-compose.yml  hybrid1pq-docker-compose.yml  hybrid2pq-cert-docker-compose.yml  hybrid2pq-docker-compose.yml  pq-only-docker-compose.yml  strongswan.conf
scripts/: install_python_deps.sh  run_crypto_matrix.py  run_experiment_suite.sh  run_performance_test.sh  setup_docker_test_env.sh
tests/: test_config_helpers.py  test_warmup_filters.py
(+56 files in other folders)
